feat(backend): add  graphql controller to log aspect